--- a/.classpath
+++ b/.classpath
@@ -11,8 +11,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/log4j-1.2.16.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/gwtupload-0.6.1.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/gwtupload-gae-0.6.1.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-io-1.4.jar"/>
 	<classpathentry kind="con" path="com.google.appengine.eclipse.core.GAE_CONTAINER/App Engine"/>
 	<classpathentry kind="lib" path="/Applications/eclipse/plugins/com.google.gwt.eclipse.sdkbundle_2.3.0.r36v201104261928/gwt-2.3.0/validation-api-1.0.0.GA-sources.jar"/>
@@ -29,5 +27,7 @@
 			<attribute name="javadoc_location" value="file:/Applications/eclipse/plugins/com.google.gwt.eclipse.sdkbundle.2.1.0_2.1.0.v201010280047/gwt-2.1.0/doc/javadoc/"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="/Users/manuel/Documents/workspace/EaternityRechner/war/WEB-INF/lib/gwtupload-0.6.3-compat.jar"/>
+	<classpathentry kind="lib" path="/Users/manuel/Documents/workspace/EaternityRechner/war/WEB-INF/lib/gwtupload-gae-0.6.3.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
