--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -1,4 +1,9 @@
-<web-app>
+<?xml version="1.0" encoding="utf-8"?>
+<!DOCTYPE web-app PUBLIC
+ "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
+ "http://java.sun.com/dtd/web-app_2_3.dtd">
+
+<web-app xmlns="http://java.sun.com/xml/ns/javaee" version="2.5">
 
 <!-- manuel: precompilation added -->
  <!-- <precompilation-enabled>true</precompilation-enabled> -->
@@ -15,6 +20,18 @@
         <filter-name>appstats</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
+    
+     <servlet>
+        <servlet-name>menuserve</servlet-name>
+        <servlet-class>ch.eaternity.server.MenuServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>menuserve</servlet-name>
+        <url-pattern>/menus/*</url-pattern>
+    </servlet-mapping>
+ <!--   <welcome-file-list>
+        <welcome-file>menu.jsp</welcome-file>
+    </welcome-file-list> -->
     
     
       <servlet>
