--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -20,7 +20,7 @@
         <filter-name>appstats</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
-    
+  <!--   
      <servlet>
         <servlet-name>menuserve</servlet-name>
         <servlet-class>ch.eaternity.server.MenuServlet</servlet-class>
@@ -29,7 +29,7 @@
         <servlet-name>menuserve</servlet-name>
         <url-pattern>/menus/*</url-pattern>
     </servlet-mapping>
- <!--   <welcome-file-list>
+   <welcome-file-list>
         <welcome-file>menu.jsp</welcome-file>
     </welcome-file-list> -->
     
