--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,7 +1,7 @@
-#Thu Nov 11 11:16:07 CET 2010
+#Fri Aug 26 10:00:23 CEST 2011
 eclipse.preferences.version=1
 encoding//src/ch/eaternity/client/EaternityRechner.java=UTF-8
-encoding//src/ch/eaternity/client/RezeptView.java=UTF-8
+encoding//src/ch/eaternity/client/RecipeView.java=UTF-8
 encoding//src/ch/eaternity/client/Search.java=UTF-8
 encoding//src/ch/eaternity/client/TopPanel.java=UTF-8
 encoding//src/ch/eaternity/shared/IngredientSpecification.java=UTF-8
