--- a/.classpath
+++ b/.classpath
@@ -10,10 +10,6 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/log4j-1.2.16.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-io-1.4.jar"/>
-	<classpathentry kind="lib" path="/Users/manuel/Downloads/gwt-maps.jar"/>
-	<classpathentry kind="lib" path="/Users/manuel/Downloads/gwtupload-gae-0.6.4-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="/Users/manuel/Downloads/gwtupload-0.6.4-20110712.073705-11.jar"/>
-	<classpathentry kind="con" path="com.google.appengine.eclipse.core.GAE_CONTAINER/App Engine"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/gwt-dnd-3.1.1.jar"/>
 	<classpathentry kind="con" path="com.google.gwt.eclipse.core.GWT_CONTAINER/GWT (2)"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/gwt-urlshortener-v1-0.2-alpha.jar"/>
@@ -22,6 +18,11 @@
 			<attribute name="optional" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/requestfactory-server-2.4.0.jar"/>
+	<classpathentry kind="con" path="com.google.appengine.eclipse.core.GAE_CONTAINER/App Engine (1)"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/gwt-maps.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/gwtupload-gae-0.6.4-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/requestfactory-apt-2011-08-18.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/gwtupload-0.6.4-20110712.073705-11.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/gwt-servlet-deps-1.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
