--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd">
-
-<web-app xmlns="http://java.sun.com/xml/ns/javaee" version="2.5">
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xmlns="http://java.sun.com/xml/ns/javaee"
+  xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+  xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
+  http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 
 <!-- manuel: precompilation added -->
  <!-- <precompilation-enabled>true</precompilation-enabled> -->
@@ -106,6 +106,15 @@
 	   <servlet-name>uploadServlet</servlet-name>
 	   <url-pattern>/upload</url-pattern>
 	</servlet-mapping>
+	
+	 <servlet>
+    <servlet-name>Convert</servlet-name>
+    <servlet-class>ch.eaternity.server.ConvertServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Convert</servlet-name>
+    <url-pattern>/convert</url-pattern>
+  </servlet-mapping>
 	
   <!--servlet>
     <servlet-name>uploadServlet</servlet-name>
