--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,7 @@
-#Fri Aug 26 10:00:23 CEST 2011
+#Sun Oct 30 13:30:40 CET 2011
 eclipse.preferences.version=1
 encoding//src/ch/eaternity/client/EaternityRechner.java=UTF-8
+encoding//src/ch/eaternity/client/RecipeEditView.java=UTF-8
 encoding//src/ch/eaternity/client/RecipeView.java=UTF-8
 encoding//src/ch/eaternity/client/Search.java=UTF-8
 encoding//src/ch/eaternity/client/TopPanel.java=UTF-8
