--- a/.classpath
+++ b/.classpath
@@ -23,10 +23,10 @@
 	<classpathentry kind="lib" path="war/WEB-INF/lib/requestfactory-apt-2011-08-18.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/gwtupload-0.6.4-20110712.073705-11.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/gwt-servlet-deps-1.jar"/>
-	<classpathentry kind="con" path="com.google.gdt.eclipse.managedapis.MANAGED_API_CONTAINER/urlshortener-v1"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/gwt-maps-1.1.1.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/gson-2.1.jar"/>
 	<classpathentry kind="con" path="com.google.gwt.eclipse.core.GWT_CONTAINER/GWT"/>
 	<classpathentry kind="con" path="com.google.appengine.eclipse.core.GAE_CONTAINER/App Engine"/>
+	<classpathentry kind="con" path="com.google.gdt.eclipse.managedapis.MANAGED_API_CONTAINER/urlshortener-v1r5lv1.12.0-beta"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
