--- a/.classpath
+++ b/.classpath
@@ -12,7 +12,7 @@
 	<classpathentry kind="con" path="com.google.appengine.eclipse.core.GAE_CONTAINER/App Engine"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-fileupload-1.2.2.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/objectify-3.1.jar" />
+	<classpathentry kind="lib" path="war/WEB-INF/lib/objectify-3.1.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/gwt-log-3.2.0.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/log4j-1.2.16.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-io-2.4.jar"/>
@@ -20,10 +20,9 @@
 	<classpathentry kind="lib" path="war/WEB-INF/lib/gwt-maps-1.1.1.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/gwtupload-0.6.6.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/gwtupload-gae-0.6.6.jar"/>
-
 	<classpathentry kind="lib" path="war/WEB-INF/lib/gson-2.2.2.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/guava-14.0-rc1.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/guava-gwt-14.0-rc1.jar"/>
-
+	<classpathentry combineaccessrules="false" kind="src" path="/eaticious"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
