--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -48,6 +48,15 @@
         </auth-constraint>
     </security-constraint>
     
+    <servlet>
+  <servlet-name>jUnitHostImpl</servlet-name>
+  <servlet-class>com.google.gwt.junit.server.JUnitHostImpl</servlet-class>
+</servlet>
+<servlet-mapping>
+  <servlet-name>jUnitHostImpl</servlet-name>
+  <url-pattern>/eaternity/junithost/*</url-pattern>
+</servlet-mapping>
+    
     
   <!-- Servlets -->
 
