--- a/.classpath
+++ b/.classpath
@@ -12,7 +12,6 @@
 	<classpathentry kind="con" path="com.google.appengine.eclipse.core.GAE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-fileupload-1.2.2.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/objectify-3.1.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/gwt-log-3.2.0.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/log4j-1.2.16.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/commons-io-2.4.jar"/>
@@ -24,5 +23,10 @@
 	<classpathentry kind="lib" path="war/WEB-INF/lib/guava-14.0-rc1.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/guava-gwt-14.0-rc1.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/gwt-bootstrap-2.0.4.0.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/objectify-4.0b1.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:file:/Users/aurelianjaggi/Documents/workspace/EaternityRechner/war/WEB-INF/lib/objectify-4.0b1-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
