--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -15,6 +15,18 @@
         <filter-name>appstats</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
+    
+    <!-- Objectify requires a filter to clean up any thread-local transaction contexts and 
+    pending asynchronous operations that remain at the end of a request -->
+    <filter>
+        <filter-name>ObjectifyFilter</filter-name>
+        <filter-class>com.googlecode.objectify.ObjectifyFilter</filter-class>
+	</filter>
+	<filter-mapping>
+	        <filter-name>ObjectifyFilter</filter-name>
+	        <url-pattern>/*</url-pattern>
+	</filter-mapping>
+
  
   <!--   the idea here is to access the app, via a menu api (where the xml of a menu is served)
      <servlet>
