--- a/.classpath
+++ b/.classpath
@@ -23,7 +23,7 @@
 	<classpathentry kind="lib" path="war/WEB-INF/lib/guava-14.0-rc1.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/guava-gwt-14.0-rc1.jar"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/gwt-bootstrap-2.0.4.0.jar"/>
-	<classpathentry kind="lib" path="war/WEB-INF/lib/objectify-4.0b1.jar">
+	<classpathentry kind="lib" path="war/WEB-INF/lib/objectify-4.0b1.jar" sourcepath="/Users/aurelianjaggi/.m2/repository/com/googlecode/objectify/objectify/4.0b1/objectify-4.0b1-sources.jar">
 		<attributes>
 			<attribute name="javadoc_location" value="jar:file:/Users/aurelianjaggi/Documents/workspace/EaternityRechner/war/WEB-INF/lib/objectify-4.0b1-javadoc.jar!/"/>
 		</attributes>
