GWTQuery DND library added

--- a/.classpath
+++ b/.classpath
@@ -28,5 +28,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/eaticious-1.0.jar"/>
+	<classpathentry kind="lib" path="war/WEB-INF/lib/gquery-dnd-bundle-1.0.6.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
